# palautusrepositorio

./: .coverage  .coveragearc  README.md
viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: asfjkfjk.txt  haara2.txt  track.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  viitegeneraattori.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: log.html  login.robot  output.xml  register.robot  report.html  resource.robot
viikko3/nhl-reader/: pyproject.toml
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/src/: log.html  output.xml  report.html
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: log.html  login.robot  output.xml  register.robot  report.html  resource.robot
viikko4/: reflektiotekniikat1.txt
viikko4/maksukortti-mock/: .coverage  pyproject.toml
viikko4/tdd-ostoskori/src/: ostoskori.py  ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py
(+1 files in other folders)
